--- a/web.html
+++ b/web.html
@@ -4,7 +4,7 @@
 <body style="background-colour:yellow;">
 <h1 style="text-align:center;">HTML website</H1>
 <p><u>THIS IS A HTML WEBSITE</u></p>
-<h2>an unordered list,/h2>
+<h2>an unordered list</h2>
 <u1>
 <li>INFORMATION TECHNOLOGY</li>
 <li>CSE</li>
